--- a/memo-pri-wedding/src/components/LoveStory.astro
+++ b/memo-pri-wedding/src/components/LoveStory.astro
@@ -35,13 +35,13 @@
   <div class="photo-carousel-container w-full relative">
     <!-- Navigation Buttons -->
     <div class="flex justify-end space-x-2 mb-2 relative z-10 px-4">
-      <div class="swiper-button-prev love-story-swiper-prev cursor-pointer">
+      <div class="love-story-swiper-prev cursor-pointer">
         <svg class="w-5 h-5 text-[#004AAD]" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
           <line x1="19" y1="12" x2="5" y2="12"></line>
           <polyline points="12 19 5 12 12 5"></polyline>
         </svg>
       </div>
-      <div class="swiper-button-next love-story-swiper-next cursor-pointer">
+      <div class="love-story-swiper-next cursor-pointer">
         <svg class="w-5 h-5 text-[#004AAD]" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
           <line x1="5" y1="12" x2="19" y2="12"></line>
           <polyline points="12 5 19 12 12 19"></polyline>
